# SPU_CSC3220_W24_T4

./: .gitignore  Notes_TracyMai.md  Notes_caog.md  Notes_vaicekonisk.md  README.md
Code/: CMakeLists.txt  CalendarPage.qml  CustomButton.qml  CustomIconButton.qml  CustomRectangle.qml  CustomRectangleEditable.qml  Database.js  HappinessBar.qml  Home.qml  Setting.qml  WaterLog.qml  main.cpp
Design/: DDL.sql  dbschema.sql  queries.sql
